--- a/BACK/restaurante/src/main/resources/application.properties
+++ b/BACK/restaurante/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.application.name=restaurante
-spring.datasource.url=jdbc:mysql://localhost:3306/restaurante_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=1234
+#spring.datasource.url=jdbc:mysql://localhost:3306/restaurante_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=1234
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -9,4 +12,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Puerto de la API
-server.port=8080
+server.port=${PORT:8080}
